adding openBrowser to serve-slides + migrating back to java 8 to be able to use more widely the plugin